--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     ports:
       - 5432:5432
     environment:
-      - PGPASSWORD=password
+      - POSTGRES_PASSWORD=password
       - PGUSER=postgres
     volumes:
       - db-data:/var/lib/postgresql/data
