nose, mil cosas de login

--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -12,4 +12,7 @@ spring:
     url: jdbc:postgresql://localhost:5432/postgres
     password: password
     username: postgres
+security:
+  session:
+    secretKey: "ivan es un boludo y no me lo banco mas el 21/07/2021 fue el ultimo dia"
 
