--- a/server/build.gradle
+++ b/server/build.gradle
@@ -33,6 +33,10 @@ dependencies {
 	implementation 'org.liquibase:liquibase-core'
 	implementation 'org.postgresql:postgresql'
 
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
+
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2'
 	testImplementation 'org.springframework.security:spring-security-test'
 	testImplementation "org.springframework.boot:spring-boot-starter-test"
 
